[gd_scene load_steps=5 format=3 uid="uid://d4igo2jg8tdwv"]

[ext_resource type="Script" path="res://UI/over_lay.gd" id="1_f0uur"]
[ext_resource type="Texture2D" uid="uid://cd28dlfx6ppyr" path="res://Scenes/Achievements/Border.png" id="2_84lab"]
[ext_resource type="Texture2D" uid="uid://bl7di3j6outnl" path="res://Scenes/Achievements/SpriteFrame.png" id="3_4yhrh"]
[ext_resource type="Texture2D" uid="uid://bavps5cydggrp" path="res://icon.svg" id="4_6h8ew"]

[node name="OverLay" type="CanvasLayer"]
layer = 10
visible = false
offset = Vector2(960, 0)
transform = Transform2D(1, 0, 0, 1, 960, 0)
script = ExtResource("1_f0uur")

[node name="AmateurClicker" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1259.0
offset_right = -661.0
offset_bottom = 325.0
grow_horizontal = 2

[node name="Border" type="NinePatchRect" parent="AmateurClicker"]
layout_mode = 2
texture = ExtResource("2_84lab")
region_rect = Rect2(0, 0, 640, 497)
patch_margin_left = 34
patch_margin_top = 34
patch_margin_right = 34
patch_margin_bottom = 34

[node name="MCMain" type="MarginContainer" parent="AmateurClicker"]
layout_mode = 2
theme_override_constants/margin_left = 33
theme_override_constants/margin_top = 33
theme_override_constants/margin_right = 33
theme_override_constants/margin_bottom = 33

[node name="ColorRect" type="ColorRect" parent="AmateurClicker/MCMain"]
show_behind_parent = true
custom_minimum_size = Vector2(20, 60)
layout_mode = 2
color = Color(0, 0, 0, 0.827451)

[node name="GC" type="GridContainer" parent="AmateurClicker/MCMain"]
layout_mode = 2

[node name="EventName" type="Label" parent="AmateurClicker/MCMain/GC"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.929412, 0.737255, 0, 0.423529)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 40
text = "ACHIEVEMENT COMPLETED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GC" type="GridContainer" parent="AmateurClicker/MCMain/GC"]
layout_mode = 2
columns = 3

[node name="IconBorder" type="TextureRect" parent="AmateurClicker/MCMain/GC/GC"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_4yhrh")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="AmateurClicker/MCMain/GC/GC/IconBorder"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6h8ew")
expand_mode = 1

[node name="GC" type="GridContainer" parent="AmateurClicker/MCMain/GC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AchievementName" type="Label" parent="AmateurClicker/MCMain/GC/GC/GC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.913725, 0.678431, 0, 1)
theme_override_colors/font_shadow_color = Color(0.839216, 0.839216, 0.839216, 0.101961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 35
theme_override_font_sizes/font_size = 39
text = "Template"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CR" type="ColorRect" parent="AmateurClicker/MCMain/GC/GC/GC"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="AchievementGet" type="Label" parent="AmateurClicker/MCMain/GC/GC/GC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 21
text = "Template"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CR2" type="ColorRect" parent="AmateurClicker/MCMain/GC/GC/GC"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="AchievementReward" type="Label" parent="AmateurClicker/MCMain/GC/GC/GC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.913725, 0.815686, 0.584314, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.329412)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 11
theme_override_font_sizes/font_size = 20
text = "REWARD: ???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RPadding" type="VBoxContainer" parent="AmateurClicker/MCMain/GC/GC"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementShowTimer" type="Timer" parent="AmateurClicker"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="AmateurClicker/AchievementShowTimer" to="." method="_on_achievement_show_timer_timeout"]
